unpackaged/main/default/objects/pse__Milestone__c/fields/MA_Amount__c.field-meta.xml
<CustomField>
    <fullName>MA_Amount__c</fullName>
    <formula>pse__Milestone_Amount__c  * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MA Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>