unpackaged/main/default/objects/pse__Milestone__c/fields/Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date__c</fullName>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>