unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Milestone_Owner__c.field-meta.xml
<CustomField>
    <fullName>psa_Milestone_Owner__c</fullName>
    <label>Milestone Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>IHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>