unpackaged/main/default/objects/pse__Milestone__c/fields/PSA_milestone_POD_location__c.field-meta.xml
<CustomField>
    <fullName>PSA_milestone_POD_location__c</fullName>
    <description>Field that stores the location of the POD for a given milestone</description>
    <inlineHelpText>Field that stores the location of the POD for a given milestone</inlineHelpText>
    <label>PSA_milestone_POD_location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>