unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>psa_Milestone_Type__c</fullName>
    <description>Used to define if the Milestone is a Service Credit or Pre-pay Milestone</description>
    <inlineHelpText>Used to define if the Milestone is a Service Credit or Pre-pay Milestone</inlineHelpText>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Pre-pay</fullName>
            </value>
            <value>
                <fullName>Service Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>