unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Miscellaneous_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>psa_Miscellaneous_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Miscellaneous Adjustment</label>
    <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>