unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>psa_Planned_Date__c</fullName>
    <description>This field is populated with the Target Date entered on creation of the Milestone and cannot be changed.</description>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>