unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Pre_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>psa_Pre_Paid_Amount__c</fullName>
    <label>Pre Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>