unpackaged/main/default/objects/pse__Milestone__c/fields/psa_Prepaid_Burn__c.field-meta.xml
<CustomField>
    <fullName>psa_Prepaid_Burn__c</fullName>
    <formula>IF( ISPICKVAL(pse__Project__r.pse__Billing_Type__c, 'Prepaid T&amp;M / Drawdown')
			,  pse__Billable_Amount_In_Financials__c / pse__Milestone_Amount__c 
			, NULL
				)</formula>
    <label>Prepaid % Burn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>