unpackaged/main/default/objects/pse__Milestone__c/fields/psaws__Milestone_Is_Late__c.field-meta.xml
<CustomField>
    <fullName>psaws__Milestone_Is_Late__c</fullName>
    <formula>ISNULL(pse__Actual_Date__c) &amp;&amp; pse__Target_Date__c &lt;= TODAY()
||
pse__Actual_Date__c &gt;= pse__Project__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Milestone Late</label>
    <type>Checkbox</type>
</CustomField>