unpackaged/main/default/objects/pse__Milestone__c/fields/psaws__Project_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>psaws__Project_Is_Active__c</fullName>
    <formula>pse__Project__r.pse__Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Is Active</label>
    <type>Checkbox</type>
</CustomField>