unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Date__c</fullName>
    <label>Actual Date</label>
    <type>Date</type>
</CustomField>