unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Apply_Default_Bill_Rate_to_Timecard__c.field-meta.xml
<CustomField>
    <fullName>pse__Apply_Default_Bill_Rate_to_Timecard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, and if default-timecard-bill-rate-from-milestone config is set to true, Default Bill Rate will be defaulted onto any child Timecards.</description>
    <inlineHelpText>If checked, and if default-timecard-bill-rate-from-milestone config is set to true, Default Bill Rate will be defaulted onto any child Timecards.</inlineHelpText>
    <label>Apply Default Bill Rate to Timecard</label>
    <type>Checkbox</type>
</CustomField>