unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Approved_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Approved_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Billing</label>
    <type>Checkbox</type>
</CustomField>