unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Billing_Event_Released__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Released__c</fullName>
    <description>Reflects Released flag value on Billing Event Item's parent Billing Event</description>
    <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
    <label>Billing Event Released</label>
    <type>Text</type>
</CustomField>