unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Billing_Event_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Status__c</fullName>
    <description>Status pick list value on Billing Event Item's parent Billing Event</description>
    <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),'',TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
    <label>Billing Event Status</label>
    <type>Text</type>
</CustomField>