unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Cost_Transaction__c.field-meta.xml
<CustomField>
    <fullName>pse__Cost_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Transaction</label>
    <referenceTo>pse__Transaction__c</referenceTo>
    <relationshipLabel>Milestone (Cost Transaction)</relationshipLabel>
    <relationshipName>CostForMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>