unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Disable_Project_Task_Hours_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>pse__Disable_Project_Task_Hours_Roll_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if project task hours are rolled up on the milestone. The default value is false.</inlineHelpText>
    <label>Disable Project Task Hours Roll Up</label>
    <type>Checkbox</type>
</CustomField>