unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Eligible_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Eligible_for_Billing__c</fullName>
    <description>Indicates Milestone is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project's Account = {not blank}
Project Exclude From Billing = false</description>
    <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
    <inlineHelpText>Indicates Milestone is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).</inlineHelpText>
    <label>Eligible for Billing</label>
    <type>Text</type>
</CustomField>