unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Log_Milestone_Cost_As_External__c.field-meta.xml
<CustomField>
    <fullName>pse__Log_Milestone_Cost_As_External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Milestone Cost As External</label>
    <type>Checkbox</type>
</CustomField>