unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Non_Billable_Days_Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Billable Days Submitted</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>