unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Override_Project_Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Project_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this field is set, it overrides the Group to which a Milestone's Transactions will roll up for Group Actuals, even if its Project is in a different Group.  Typically a Milestone's Transactions roll up to its Project's Group.  Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>If this field is set, it overrides the Group to which a Milestone's Transactions will roll up for Group Actuals, even if its Project is in a different Group. Typically a Milestone's Transactions roll up to its Project's Group.</inlineHelpText>
    <label>Override Project Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Override Group For Milestones</relationshipLabel>
    <relationshipName>Override_Group_For_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>