unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Override_Project_Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Project_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this field is set, it overrides the Practice to which a Milestone's Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Milestone's Transactions roll up to its Project's Practice.  Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>If this field is set, it overrides the Practice to which a Milestone's Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Milestone's Transactions roll up to its Project's Practice.</inlineHelpText>
    <label>Override Project Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Override Practice For Milestones</relationshipLabel>
    <relationshipName>Override_Practice_For_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>