unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Override_Project_Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Override_Project_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this field is set, it overrides the Region to which a Milestone's Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Milestone's Transactions roll up to its Project's Region.  Note that either way, the Transactions will continue to roll up to the same Project's Project Actuals.</description>
    <inlineHelpText>If this field is set, it overrides the Region to which a Milestone's Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Milestone's Transactions roll up to its Project's Region.</inlineHelpText>
    <label>Override Project Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Override Region For Milestones</relationshipLabel>
    <relationshipName>Override_Region_For_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>