unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Percent_Hours_Completed_For_Recognition__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Hours_Completed_For_Recognition__c</fullName>
    <description>Percentage of hours completed on this milestone, to be used in Revenue Forecasting calculations. When you run a revenue forecast on the project that relates to this milestone, the following calculation is used to work out the value in this field: (Sum of approved timecard hours /Value in Planned Hours field) multiplied by 100.
        This field is only populated when "% Complete" is displayed in the Recognition Method field, or when you are using the integration with FinancialForce Revenue Management and this milestone looks up to a FinancialForce Revenue Management template of type "% Complete".</description>
    <inlineHelpText>Percentage of hours completed, for Revenue Forecasting calculations using the "% Complete" recognition method. The value is (Sum of approved timecard hours /Value in Planned Hours field) multiplied by 100.</inlineHelpText>
    <label>% Hours Completed for Recognition</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>