unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Project_Currency_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
    <description>Project (Bill Rate) Exchange Rate, relative to corporate currency, calculated on the actual or the target date of the milestone.</description>
    <inlineHelpText>Project (Bill Rate) Exchange Rate, relative to corporate currency, calculated on the actual or the target date of the milestone.</inlineHelpText>
    <label>Project Currency Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>