unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Project_Task_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Project_Task_Hours__c</fullName>
    <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
    <label>Project Task Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>