unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>The start date of this milestone.</description>
    <inlineHelpText>The start date of this milestone.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>