unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Timecard_Internal_Costs_Submitted__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Timecard Internal Costs Submitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>