unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Total_Number_of_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Number_of_Completed_Tasks__c</fullName>
    <label>Total Number of Completed Tasks</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>