unpackaged/main/default/objects/pse__Milestone__c/fields/pse__Total_Points_from_Tasks__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Points_from_Tasks__c</fullName>
    <label>Total Points from Tasks</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>