unpackaged/main/default/objects/pse__Milestone__c/validationRules/pse__Milestone_Project_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Milestone_Project_is_Constant</fullName>
    <active>true</active>
    <description>A Milestone's Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
    <errorConditionFormula>OR(ISNULL(pse__Project__c),(pse__Project__c=''),AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
    <errorDisplayField>pse__Project__c</errorDisplayField>
    <errorMessage>A Milestone's Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
</ValidationRule>